# nlingua2

./: .gitignore  README.md  code_reader.py  main.py  pyproject.toml
src/nlingua2/: cli.py  exceptions.py  factories.py  models.py  parser.py  runner.py  settings.py  translator.py  utils.py  validation.py  whisperer.py
